2004-10-05  Tom Tromey  <tromey@redhat.com>

	* link.cc (resolve_pool_entry): Add signature info to missing
	method's information.

	* gnu/gcj/util/Debug.java (Debug(int,boolean)): New constructor.
	* gnu/gcj/util/natDebug.cc (_Jv_StaticDeepDebug): New function.

2004-10-04  Tom Tromey  <tromey@redhat.com>

	* boehm.cc (_Jv_MarkObj): Correctly indicate base pointer when
	marking IDT.

2004-09-29  Tom Tromey  <tromey@redhat.com>

	* Makefile.am (libgcj_la_SOURCES): Mention link.cc, not
	resolve.cc.
	* include/jvm.h (class _Jv_Linker): Renamed from _Jv_Resolver.
	* jni.cc: Use _Jv_Linker.
	* interpret.cc: Use _Jv_Linker.
	* java/lang/reflect/natField.cc (getType): Use _Jv_Linker.
	* java/lang/natClassLoader.cc: Use _Jv_Linker.
	* java/lang/natVMClassLoader.cc (resolveClass): Use _Jv_Linker.
	* java/lang/Class.h: Use _Jv_Linker.
	* java/lang/natClass.cc (initializeClass): Use _Jv_Linker.
	* resolve.cc: Renamed ...
	* link.cc: ... here.  Use _Jv_Linker.
	* defineclass.cc (checkExtends): Use _Jv_Linker.

2004-09-17  Tom Tromey  <tromey@redhat.com>

	* defineclass.cc (handleCodeAttribute): Don't reference
	`deferred'.
	(handleMethodsEnd): Likewise.
	* include/java-interp.h (_Jv_MethodBase::deferred): Removed
	field.
	(_Jv_Defer_Resolution): Don't declare or define.
	* interpret.cc (do_create_ncode): Don't resolve deferred method
	pointers.
	* java/lang/Class.h (_Jv_Defer_Resolution): Don't declare.
	* resolve.cc (link_symbol_table): No need to defer resolution.

2004-09-14  Tom Tromey  <tromey@redhat.com>

	* boehm.cc (MAYBE_MARK): Remove unused `Exit' argument.
	(_Jv_MarkObj): Updated.
	(_Jv_MarkArray): Likewise.

	* include/jvm.h (StringClass): Removed.
	* jni.cc (_Jv_JNI_ThrowNew): Don't use StringClass.
	* interpret.cc (_Jv_InitField): Don't use StringClass.
	* java/lang/natString.cc (_Jv_StringFindSlot): Don't use
	StringClass.
	(rehash): Likewise
	(intern): Likewise.
	(_Jv_FinalizeString): Likewise.
	(_Jv_NewStringUtf8Const): Likewise.
	(equals): Likewise.