@@ -1,3 +1,8 @@
+2004-10-06  Tom Tromey  <tromey@redhat.com>
+
+	* defineclass.cc (parse): Use JV_STATE_READ.
+	* java/lang/Class.h (JV_STATE_READ): New enum value.
+
 2004-10-05  Tom Tromey  <tromey@redhat.com>
 
 	* link.cc (resolve_pool_entry): Add signature info to missing
